	  succinct, testing for the absence of the "YES" response, rather
	  than for the various ways the user might cancel the dialog.

	* src/o_arc.c: Fix for drawing a dotted arc / circle with
	  angular dot spacing too small to render. Was a sign error
	  in the alternative codepath for drawing these cases.

2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

       * src/x_dialog.c:
	 Make "Save changes" the default response in the close page
	 confirmation dialog.

       * src/o_picture.c, src/x_attribedit.c, src/x_autonumber.c,
	 src/x_compselect.c, src/x_dialog.c, src/x_fileselect.c,
	 src/x_image.c, src/x_log.c, src/x_multiattrib.c,
	 src/x_pagesel.c, src/x_print.c, src/x_script.c,
	 src/i_callbacks.c:
	 
	 Set the alternative button order for gtk dialogs.
	 This would allow to display the correct button order whatever
	 system is running this app. Fix for bug #1553483.

	* src/i_callbacks.c:
	  - Do nothing if the user deletes the page revert question dialog.
	
	  - Pop up a message if there is no component selected and the user
	  hits help->component documentation menu.
	
	* src/x_compselect.c: 
	  Make the component selector filter case insensitive.
	  Fixes bug #1673589. Thanks to Phil Endecott for reporting the
	  bug.
	
	* lib/system-gschemrc.in: Apply patch from Peter Brett. Thanks!
	  Rearrange gschem help menu & make it link to wiki pages.

	  Rearrange the gschem help menu:
	   - "Manual" now links directly to the gschem User Guide.
	      (Note by cnieves: I commented this out until the gsch2pcb 
	      tutorial gets into the wiki and the UG wiki page is improved).
	   - "FAQ" now links directly to the gschem FAQ
	   - Add menu item which links directly to the wiki root page
	   - Rearrange "About" and "Hotkeys" to bottom of menu
	  
	* include/prototype.h, src/g_funcs.h, src/g_register.c:
	  Apply patch from Peter Brett, adding the gschem-browse-wiki 
	  Scheme function. Thanks!
